@@ -24,7 +24,6 @@ import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.Date;
 import java.util.List;
@@ -82,6 +81,7 @@ import org.apache.lucene.search.TopScoreDocCollectorManager;
 import org.apache.lucene.search.TotalHitCountCollector;
 import org.apache.lucene.search.TotalHits;
 import org.apache.lucene.search.TotalHits.Relation;
+import org.apache.lucene.search.Weight;
 import org.apache.lucene.store.Directory;
 import org.apache.lucene.util.Bits;
 import org.apache.lucene.util.BytesRef;
@@ -139,7 +139,7 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
   // These should *only* be used for debugging or monitoring purposes
   public static final AtomicLong numOpens = new AtomicLong();
   public static final AtomicLong numCloses = new AtomicLong();
-  private static final Map<String, SolrCache<?, ?>> NO_GENERIC_CACHES = Collections.emptyMap();
+  private static final Map<String, SolrCache<?, ?>> NO_GENERIC_CACHES = Map.of();
   private static final SolrCache<?, ?>[] NO_CACHES = new SolrCache<?, ?>[0];
 
   public static final int EXECUTOR_MAX_CPU_THREADS = Runtime.getRuntime().availableProcessors();
@@ -170,7 +170,6 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
   private final LongAdder liveDocsNaiveCacheHitCount = new LongAdder();
   private final LongAdder liveDocsInsertsCount = new LongAdder();
   private final LongAdder liveDocsHitCount = new LongAdder();
-  private final List<AutoCloseable> toClose = new ArrayList<>();
 
   // Synchronous gauge for caching enabled status
   private AttributedLongGauge cachingEnabledGauge;
@@ -400,7 +399,6 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
     this.leafReader = SlowCompositeReaderWrapper.wrap(this.reader);
     this.core = core;
     this.statsCache = core.createStatsCache();
-    this.toClose.add(this.statsCache);
     this.schema = schema;
     this.name =
         "Searcher@"
@@ -612,7 +610,7 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
         caffeineCache.initializeMetrics(
             solrMetricsContext,
             core.getCoreAttributes().toBuilder().put(NAME_ATTR, cache.name()).build(),
-            "solr_core_indexsearcher_cache");
+            "solr.core.indexsearcher.cache");
       }
     }
     initializeMetrics(solrMetricsContext, core.getCoreAttributes());
@@ -669,6 +667,8 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
       directoryFactory.release(getIndexReader().directory());
     }
 
+    IOUtils.closeQuietly(statsCache);
+
     try {
       SolrInfoBean.super.close();
     } catch (Exception e) {
@@ -677,7 +677,6 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
 
     // do this at the end so it only gets done if there are no exceptions
     numCloses.incrementAndGet();
-    IOUtils.closeQuietly(toClose);
     assert ObjectReleaseTracker.release(this);
   }
 
@@ -798,12 +797,24 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
     return qr;
   }
 
+  /**
+   * Override the default behavior to proxy to an anonymous {@link IndexSearcher} with {@link
+   * IndexSearcher#setTimeout} enabled, if and only if {@link QueryLimits#getCurrentLimits} are
+   * enabled.
+   *
+   * <p>It's important that this logic live in an overriden method that processes a query
+   * <em>after</em> the <code>Weight</code> has been computed, because some customer Solr <code>
+   * Query</code> classes expect a <code>SolrIndexSearcher</code> to be used for query rewrite and
+   * weight creation.
+   */
   @Override
-  public void search(Query query, Collector collector) throws IOException {
+  protected void searchLeaf(
+      LeafReaderContext ctx, int minDocId, int maxDocId, Weight weight, Collector collector)
+      throws IOException {
     QueryLimits queryLimits = QueryLimits.getCurrentLimits();
     if (!queryLimits.isLimitsEnabled()) {
       // no timeout.  Pass through to super class
-      super.search(query, collector);
+      super.searchLeaf(ctx, minDocId, maxDocId, weight, collector);
     } else {
       // Timeout enabled!  This impl is maybe a hack.  Use Lucene's IndexSearcher timeout.
       // But only some queries have it so don't use on "this" (SolrIndexSearcher), not to mention
@@ -814,9 +825,7 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
           reader, core.getCoreContainer().getIndexSearcherExecutor()) { // cheap, actually!
         void searchWithTimeout() throws IOException {
           setTimeout(queryLimits); // Lucene's method name is less than ideal here...
-          // XXX Deprecated in Lucene 10, we should probably use search(Query, CollectorManager)
-          // instead
-          super.search(query, collector);
+          super.searchLeaf(ctx, minDocId, maxDocId, weight, collector);
           if (timedOut()) {
             throw new QueryLimitsExceededException(
                 "Limits exceeded! (search): " + queryLimits.limitStatusMessage());
@@ -2627,77 +2636,71 @@ public class SolrIndexSearcher extends IndexSearcher implements Closeable, SolrI
     warmupTimer =
         new AttributedLongTimer(
             solrMetricsContext.longHistogram(
-                "solr_core_indexsearcher_warmup_time",
+                "solr.core.indexsearcher.warmup_time",
                 "Searcher warmup time (ms)",
                 OtelUnit.MILLISECONDS),
             baseAttributes);
 
-    toClose.add(
-        solrMetricsContext.observableLongCounter(
-            "solr_core_indexsearcher_live_docs_cache",
-            "LiveDocs cache metrics",
-            obs -> {
-              obs.record(
-                  liveDocsInsertsCount.sum(),
-                  baseAttributes.toBuilder().put(TYPE_ATTR, "inserts").build());
-              obs.record(
-                  liveDocsHitCount.sum(),
-                  baseAttributes.toBuilder().put(TYPE_ATTR, "hits").build());
-              obs.record(
-                  liveDocsNaiveCacheHitCount.sum(),
-                  baseAttributes.toBuilder().put(TYPE_ATTR, "naive_hits").build());
-            }));
+    solrMetricsContext.observableLongCounter(
+        "solr.core.indexsearcher.live_docs.cache",
+        "LiveDocs cache metrics",
+        obs -> {
+          obs.record(
+              liveDocsInsertsCount.sum(),
+              baseAttributes.toBuilder().put(TYPE_ATTR, "inserts").build());
+          obs.record(
+              liveDocsHitCount.sum(), baseAttributes.toBuilder().put(TYPE_ATTR, "hits").build());
+          obs.record(
+              liveDocsNaiveCacheHitCount.sum(),
+              baseAttributes.toBuilder().put(TYPE_ATTR, "naive_hits").build());
+        });
     // reader stats (numeric)
-    toClose.add(
-        solrMetricsContext.observableLongGauge(
-            "solr_core_indexsearcher_index_num_docs",
-            "Number of live docs in the index",
-            obs -> {
-              try {
-                obs.record(reader.numDocs(), baseAttributes);
-              } catch (Exception ignore) {
-                // replacement for nullNumber
-              }
-            }));
+    solrMetricsContext.observableLongGauge(
+        "solr.core.indexsearcher.index.num_docs",
+        "Number of live docs in the index",
+        obs -> {
+          try {
+            obs.record(reader.numDocs(), baseAttributes);
+          } catch (Exception ignore) {
+            // replacement for nullNumber
+          }
+        });
 
-    toClose.add(
-        solrMetricsContext.observableLongGauge(
-            "solr_core_indexsearcher_index_docs",
-            "Total number of docs in the index (including deletions)",
-            obs -> {
-              try {
-                obs.record(reader.maxDoc(), baseAttributes);
-              } catch (Exception ignore) {
-              }
-            }));
+    solrMetricsContext.observableLongGauge(
+        "solr.core.indexsearcher.index.docs",
+        "Total number of docs in the index (including deletions)",
+        obs -> {
+          try {
+            obs.record(reader.maxDoc(), baseAttributes);
+          } catch (Exception ignore) {
+          }
+        });
     // indexVersion (numeric)
-    toClose.add(
-        solrMetricsContext.observableLongGauge(
-            "solr_core_indexsearcher_index_version",
-            "Lucene index version",
-            obs -> {
-              try {
-                obs.record(reader.getVersion(), baseAttributes);
-              } catch (Exception ignore) {
-              }
-            }));
+    solrMetricsContext.observableLongGauge(
+        "solr.core.indexsearcher.index.version",
+        "Lucene index version",
+        obs -> {
+          try {
+            obs.record(reader.getVersion(), baseAttributes);
+          } catch (Exception ignore) {
+          }
+        });
     // size of the currently opened commit
-    toClose.add(
-        solrMetricsContext.observableDoubleGauge(
-            "solr_core_indexsearcher_index_commit_size",
-            "Size of the current index commit (megabytes)",
-            obs -> {
-              try {
-                long total = 0L;
-                for (String file : reader.getIndexCommit().getFileNames()) {
-                  total += DirectoryFactory.sizeOf(reader.directory(), file);
-                }
-                obs.record(MetricUtils.bytesToMegabytes(total), baseAttributes);
-              } catch (Exception e) {
-                // skip recording if unavailable (no nullNumber in OTel)
-              }
-            },
-            OtelUnit.MEGABYTES));
+    solrMetricsContext.observableDoubleGauge(
+        "solr.core.indexsearcher.index.commit_size",
+        "Size of the current index commit (megabytes)",
+        obs -> {
+          try {
+            long total = 0L;
+            for (String file : reader.getIndexCommit().getFileNames()) {
+              total += DirectoryFactory.sizeOf(reader.directory(), file);
+            }
+            obs.record(MetricUtils.bytesToMegabytes(total), baseAttributes);
+          } catch (Exception e) {
+            // skip recording if unavailable (no nullNumber in OTel)
+          }
+        },
+        OtelUnit.MEGABYTES);
   }
 
   public long getWarmupTime() {
